# evm-rpc-canister

./: .bazelrc  .dockerignore  .gitignore  API.md  BUILD  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DeepDive.md  Dockerfile  LICENSE  NOTICE  README.md  WORKSPACE  WORKSPACE.bazel  canister_ids.json  cargo-bazel-lock.json  dfx.json  ic_eth.did  iceth-API.md  iceth.did  mops.toml  package-lock.json  package.json  providers.did  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: README.md  bazel.yml  candid.yml  ci.yml  provision-pocket-ic-server.sh  provision.sh  rust.yml
bazel/: BUILD  candid.bzl  canisters.bzl
candid/: eth_rpc.did  evm_rpc.did  ic_eth.did
docs/: proposals.adoc
e2e/motoko/: Main.mo  main.mo
e2e/rust/: Cargo.toml  build.rs
e2e/rust/src/: lib.rs  main.rs
evm_rpc_types/: CHANGELOG.md  Cargo.toml
evm_rpc_types/src/: lib.rs  tests.rs
evm_rpc_types/src/lifecycle/: mod.rs
evm_rpc_types/src/request/: mod.rs
evm_rpc_types/src/response/: mod.rs
evm_rpc_types/src/result/: mod.rs
evm_rpc_types/src/rpc_client/: mod.rs  tests.rs
lib/cketh/: Cargo.toml
lib/cketh/src/: address.rs  endpoints.rs  eth_rpc.rs  state.rs
lib/cketh/src/eth_logs/: mod.rs
lib/cketh/src/eth_rpc_client/: mod.rs  providers.rs  tests.rs
lib/motoko/: lib.mo
lib/motoko/declarations/: eth_rpc.mo  evm_rpc.mo
lib/motoko/src/: lib.mo
lib/rust/: Cargo.toml
lib/rust/src/: abi.rs  lib.rs  rpc.rs  utils.rs
mainnet/: provision.sh
proposals/: evm_rpc_2024_10_18.md
scripts/: bazel  bazel-build  bazel-sync  bootstrap  build  docker-build  e2e  examples  local  run
src/: accounting.rs  arbitrary.rs  auth.rs  candid_rpc.rs  constants.rs  ethers_core.rs  http.rs  lib.rs  main.rs  memory.rs  metrics.rs  providers.rs  request.rs  rpc.rs  signature.rs  types.rs  util.rs  validate.rs
src/candid_rpc/: cketh_conversion.rs  mod.rs  tests.rs
src/ck_eth/: mod.rs
src/ck_eth/client/: mod.rs  tests.rs
src/ck_eth/error/: tests.rs
src/ck_eth/lifecycle/: init.rs
src/ck_eth/numeric/: mod.rs  tests.rs
src/http_types/: mod.rs  tests.rs
src/logs/: mod.rs  tests.rs
src/rpc_client/: eth_rpc.rs  mod.rs  providers.rs  requests.rs  responses.rs  tests.rs
src/rpc_client/amount/: mod.rs
src/rpc_client/checked_amount/: mod.rs  tests.rs
src/rpc_client/eth_rpc/: mod.rs  tests.rs
src/rpc_client/eth_rpc_error/: mod.rs  tests.rs
src/rpc_client/json/: mod.rs  requests.rs  responses.rs
src/rpc_client/numeric/: mod.rs  tests.rs
src/types/: tests.rs
tests/: mock.rs  test.rs  tests.rs
