[package]
name = "evm_rpc_types"
version = "0.1.0"
description = "Candid types for interacting with the EVM RPC canister"
authors = ["DFINITY Foundation"]
readme = "README.md"
edition = "2021"

[dependencies]
candid = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
num-bigint = { workspace = true }
proptest = { workspace = true }