[package]
name = "evm_rpc_types"
version = "0.1.0"
description = "Candid types for interacting with the EVM RPC canister"
authors = ["DFINITY Foundation"]
readme = "README.md"
edition = "2021"

[dependencies]
candid = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }