[package]
name = "evm_rpc_types"
version = "1.0.0"
description = "Candid types for interacting with the EVM RPC canister"
license = "Apache-2.0"
readme = "README.md"
authors = ["DFINITY Foundation"]
edition = "2021"
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]
repository = "https://github.com/dfinity/ic"
documentation = "https://docs.rs/evm_rpc_types"


[dependencies]
candid = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }