[package]
name = "e2e"
version = "0.1.0"
description = "End-to-end testing with a Rust canister."
authors = ["DFINITY Foundation"]
# readme = "README.md"
edition = "2021"

[dependencies]
candid = { workspace = true }
ic-certified-map = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-eth = { workspace = true }
serde = "1"
serde_bytes = "0.11"

[build-dependencies]
ic-cdk-bindgen = { workspace = true }
