[package]
name = "e2e"
version = "0.1.0"
description = "End-to-end testing with a Rust canister."
authors = ["DFINITY Foundation"]
edition = "2021"

[dependencies]
candid = { workspace = true }
ic-certified-map = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
evm_rpc_types = { path = "../../evm_rpc_types" }

[build-dependencies]
ic-cdk-bindgen = { workspace = true }
