[package]
name = "cketh-common"
version = "0.1.0"
edition = "2021"

[lib]
name = "cketh_common"

[dependencies]
askama = "0.11"
candid = { workspace = true }
ciborium = "0.2.1"
ethnum = { version = "1.3.2", features = ["serde"] }
futures = "0.3.28"
hex = "0.4"
hex-literal = "0.4.1"
ic-canister-log = "0.2.0"
ic-canisters-http-types = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = "0.5.0"
ic-crypto-ecdsa-secp256k1 = { git = "https://github.com/dfinity/ic", rev = "release-2023-09-27_23-01" }
ic-crypto-sha3 = { git = "https://github.com/dfinity/ic", rev = "release-2023-09-27_23-01" }
ic-ic00-types = { git = "https://github.com/dfinity/ic", rev = "release-2023-09-27_23-01" }
ic-icrc1-client-cdk = { git = "https://github.com/dfinity/ic", rev = "release-2023-09-27_23-01" }
ic-metrics-encoder = "1"
ic-stable-structures = { workspace = true }
icrc-ledger-types = { git = "https://github.com/dfinity/ic", rev = "release-2023-09-27_23-01" }
minicbor = { version = "0.19.1", features = ["alloc", "derive"] }
minicbor-derive = "0.13.0"
num-bigint = "0.4.3"
num-traits = "0.2.14"
phantom_newtype = { git = "https://github.com/dfinity/ic", rev = "release-2023-09-27_23-01" }
rlp = "0.5.2"
serde = "1"
serde_bytes = "0.11"
serde_json = "1"
strum = "0.23.0"
strum_macros = "0.23.0"
thiserror = "1.0"
thousands = "0.2"

[dev-dependencies]
assert_matches = "1.5.0"
ethers-core = "2.0.8"
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "release-2023-09-27_23-01" }
ic-config = { git = "https://github.com/dfinity/ic", rev = "release-2023-09-27_23-01" }
ic-icrc1-ledger = { git = "https://github.com/dfinity/ic", rev = "release-2023-09-27_23-01" }
ic-state-machine-tests = { git = "https://github.com/dfinity/ic", rev = "release-2023-09-27_23-01" }
ic-test-utilities-load-wasm = { git = "https://github.com/dfinity/ic", rev = "release-2023-09-27_23-01" }
proptest = "1.0"
