[package]
name = "ic-eth"
version = "0.1.0"
authors = ["DFINITY Foundation"]
edition = "2021"
license = "Apache-2.0"
description = "Interact with the Ethereum blockchain from the Internet Computer."
readme = "README.md"
documentation = "https://docs.rs/motoko_proc_macro"
repository = "https://github.com/dfinity/motoko.rs"
categories = ["wasm"]
keywords = ["icp", "ethereum", "evm", "ethers", "web3"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[lib]
name = "ic_eth"

[dependencies]
ethers-core = "2.0"
ethers-providers = { version = "2.0", default-features = false }
async-trait = "0.1"
ic-cdk = "0.10"
ic-cdk-macros = "0.7"
url = "2.3"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["custom"] }
# TODO: refactor `ic-wasm-bindgen`
wasm-bindgen = { git = "https://github.com/rvanasa/wasm-bindgen", branch = "ic-wasm-bindgen" }
